--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,12 @@
 # Core Data Science Libraries
-numpy==1.26.4
-pandas==2.2.3
-scipy==1.14.1
+numpy>=1.24.0,<2.0
+pandas>=2.0.0
+scipy>=1.10.0
 
 # Machine Learning
-scikit-learn==1.5.2
-tensorflow==2.19.1
-keras==3.6.0
-h5py==3.15.1
+scikit-learn>=1.3.0
+tensorflow>=2.13.0
+h5py>=3.7.0
 
 # Streamlit App
-streamlit==1.52.1
-
-# TensorFlow Dependencies
-protobuf==5.28.3
-flatbuffers==24.3.25
-typing-extensions==4.12.2
-wrapt==1.16.0
+streamlit>=1.28.0
