--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 # Core Data Science Libraries
-numpy>=1.24.0,<2.0
+numpy>=2.0.0
 pandas>=2.0.0
 scipy>=1.10.0
 
-# Machine Learning
+# Machine Learning (use 2.20.0 for Python 3.13+ compatibility)
 scikit-learn>=1.3.0
-tensorflow>=2.13.0
+tensorflow>=2.20.0
 h5py>=3.7.0
 
 # Streamlit App
